feat: update service worker caching strategy and versioning for improved performance fix: enhance button accessibility in index.html

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </ul>
                 <!--Boutton prev et next-->
             <div class="buttons">
-                <button id="prev" aria-label="Diapositive précédente">&lt;</button>
-                <button id="next" aria-label="Diapositive suivante">&gt;</button>
+                <button type="button" id="prev" aria-label="Diapositive précédente">&lt;</button>
+                <button type="button" id="next" aria-label="Diapositive suivante">&gt;</button>
             </div>
             </div>
         </section>
